add deep verify  delete (un tested)
