# app/handlers/modules/modules.go
@@ -7,6 +7,7 @@ import (
 	"madaurus/dev/material/app/interfaces"
 	"madaurus/dev/material/app/models"
 	"madaurus/dev/material/app/services"
+	"madaurus/dev/material/app/shared"
 	"madaurus/dev/material/app/utils"
 
 	"github.com/gin-gonic/gin"
@@ -134,11 +135,10 @@ func CreateModule(collection *mongo.Collection) gin.HandlerFunc {
 		module.TeacherId = user.ID
 		err = services.CreateModule(c.Request.Context(), collection, module)
 		if err != nil {
-			log.Println(err.Error())
-			c.JSON(400, gin.H{"error": err.Error()})
+			c.JSON(400, gin.H{"error": shared.UNABLE_CREATE_MODULE})
 			return
 		}
-		c.JSON(201, gin.H{"message": "Module Created Successfully"})
+		c.JSON(201, gin.H{"message": shared.CREATE_MODULE})
 	}
 
 }
@@ -153,7 +153,7 @@ func CreateModule(collection *mongo.Collection) gin.HandlerFunc {
 // @Success 200 {object} interfaces.APiSuccess
 // @Failure 400 {object} interfaces.APiError
 // @Failure 500 {object} interfaces.APiError
-// @Router /modules [PUT]
+// @Router /modules/{moduleId} [PUT]
 func UpdateModule(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var module models.Module
@@ -177,37 +177,6 @@ func UpdateModule(collection *mongo.Collection) gin.HandlerFunc {
 			return
 		}
 		c.JSON(200, gin.H{"message": "Module Updated Successfully"})
-	}
-}
-
-// @Summary Delete Module
-// @Description Protected Route used to delete a module
-// @Produce json
-// @Accept json
-// @Success 200 {object} interfaces.APiSuccess
-// @Tags Modules
-// @Failure 400 {object} interfaces.APiError
-// @Failure 500 {object} interfaces.APiError
-// @Router /modules/delete/{id} [DELETE]
-func DeleteModule(collection *mongo.Collection) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		value, notFound := c.Get("user")
-		if notFound {
-			c.JSON(401, gin.H{"error": errors.New("user not found")})
-			return
-		}
-		user := value.(*utils.UserDetails)
-		moduleId, errP := c.Params.Get("id")
-		if errP != true {
-			c.JSON(400, gin.H{"error": errors.New("module ID is Required")})
-			return
-		}
-		err := services.DeleteModule(c.Request.Context(), collection, moduleId, user.ID)
-		if err != nil {
-			c.JSON(400, gin.H{"error": err.Error()})
-			return
-		}
-		c.JSON(200, gin.H{"message": "Module Deleted Successfully"})
 	}
 }
 
