# app/models/module.go
@@ -5,16 +5,16 @@ import "go.mongodb.org/mongo-driver/bson/primitive"
 type Module struct {
 	ID primitive.ObjectID `json:"id" bson:"_id"`
 
-	Name        string   `json:"name" binding:"required" bson:"name" validate:"required"`
-	Year        int8     `json:"year" binding:"required" bson:"year" validate:"required"`
-	Speciality  *string  `json:"speciality,omitempty"`
-	Semester    int8     `json:"semester" binding:"required" bson:"semester" validate:"required"`
-	Coefficient int8     `json:"coefficient" binding:"required" bson:"coefficient" validate:"required"`
-	TeacherId   int      `json:"teacher_id" bson:"teacher_id" validate:"required" `
-	Instructors *[]int   `json:"instructors,omitempty" bson:"instructors" `
-	IsPublic    bool     `json:"isPublic" bson:"isPublic"`
-	Plan        []string `json:"plan" binding:"required,min=1" bson:"plan"`
-	Image       *string  `json:"image,omitempty"`
+	Name        string    `json:"name" binding:"required" bson:"name" validate:"required"`
+	Year        int8      `json:"year" binding:"required" bson:"year" validate:"required"`
+	Speciality  *string   `json:"speciality,omitempty"`
+	Semester    int8      `json:"semester" binding:"required" bson:"semester" validate:"required"`
+	Coefficient int8      `json:"coefficient" binding:"required" bson:"coefficient" validate:"required"`
+	TeacherId   string    `json:"teacher_id" bson:"teacher_id" validate:"required" `
+	Instructors *[]string `json:"instructors,omitempty" bson:"instructors" `
+	IsPublic    bool      `json:"isPublic" bson:"isPublic"`
+	Plan        []string  `json:"plan" binding:"required,min=1" bson:"plan"`
+	Image       *string   `json:"image,omitempty"`
 	*Date
 }
 
